# mianshidemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/yunnex/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/yunnex/ndkdemo/: IMyAidlInterface.aidl
app/src/main/cpp/: CMakeLists.txt  MyLog.h  com_yunnex_ndkdemo_Hello.cpp  com_yunnex_ndkdemo_Hello.h  native-lib.cpp
app/src/main/java/com/yunnex/ndkdemo/: BActivity.java  Hello.java  MainActivity.java  MyService.java
app/src/main/res/layout/: activity_b.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yunnex/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
